--- a/I_Am_Legend_private.rc
+++ b/I_Am_Legend_private.rc
@@ -4,14 +4,12 @@
 #include <windows.h> // include for version info constants
 
 
-A ICON "I_Am_Dwarf.ico"
-
 //
 // TO CHANGE VERSION INFORMATION, EDIT PROJECT OPTIONS...
 //
 1 VERSIONINFO
-FILEVERSION 0,0,0,581
-PRODUCTVERSION 0,0,0,581
+FILEVERSION 0,0,0,582
+PRODUCTVERSION 0,0,0,582
 FILETYPE VFT_APP
 {
   BLOCK "StringFileInfo"
@@ -19,14 +17,14 @@ FILETYPE VFT_APP
     BLOCK "040904E4"
     {
       VALUE "CompanyName", ""
-      VALUE "FileVersion", "0.0.0.581"
-      VALUE "FileDescription", "I Am Legend game, in the style of Dwarf Fortress"
+      VALUE "FileVersion", "0.0.0.582"
+      VALUE "FileDescription", "I Am Legend game, inspired by Dwarf Fortress"
       VALUE "InternalName", ""
       VALUE "LegalCopyright", ""
       VALUE "LegalTrademarks", ""
       VALUE "OriginalFilename", ""
-      VALUE "ProductName", "I Am Dwarf"
-      VALUE "ProductVersion", "0.0.0.581"
+      VALUE "ProductName", "I Am Legend"
+      VALUE "ProductVersion", "0.0.0.582"
     }
   }
   BLOCK "VarFileInfo"
