--- a/Makefile.win
+++ b/Makefile.win
@@ -1,16 +1,16 @@
-# Project: I Am Dwarf
+# Project: I Am Legend
 # Makefile created by Dev-C++ 5.11
 
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-RES      = sdl-test_private.res
+RES      = I_Am_Legend_private.res
 OBJ      = main.o text.o vividConsole.o objects.o graphics.o input.o sound.o undead.o $(RES)
 LINKOBJ  = main.o text.o vividConsole.o objects.o graphics.o input.o sound.o undead.o $(RES)
-LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -L"C:/Users/Frank/GitStuff/franks-drawing-library" -lSDL2main  -lSDL2  -lSDL2_image  -lSDL2_mixer
+LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -L"C:/Users/Frank/GitStuff/I_Am_Dwarf" -lSDL2main  -lSDL2  -lSDL2_image  -lSDL2_mixer
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
-BIN      = I_Am_Dwarf.exe
+BIN      = I_Am_Legend.exe
 CXXFLAGS = $(CXXINCS) -ansi -std=c++11
 CFLAGS   = $(INCS) -ansi -std=c++11
 RM       = rm.exe -f
@@ -49,6 +49,6 @@ sound.o: sound.cpp
 undead.o: undead.cpp
 	$(CPP) -c undead.cpp -o undead.o $(CXXFLAGS)
 
-sdl-test_private.res: sdl-test_private.rc 
-	$(WINDRES) -i sdl-test_private.rc --input-format=rc -o sdl-test_private.res -O coff 
+I_Am_Legend_private.res: I_Am_Legend_private.rc 
+	$(WINDRES) -i I_Am_Legend_private.rc --input-format=rc -o I_Am_Legend_private.res -O coff 
 
